[package]
name = "lucidgloves-btle-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.11"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "net"] }
tokio-stream = "0.1.15"
uuid = "1.8"
tracing = "0.1.40"
tracing-subscriber = "0.3"
futures = "0.3"
lazy_static = "1.4"
anyhow = "1.0"
bytemuck = { version =  "1.15", features = ["derive"] }